# rust-pre-commit-hooks

./: .editorconfig  .gitignore copy  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
src/: build.rs
