[package]
name = "rust-pre-commit-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Ruiyang Sun <ruiyangsun02@gmail.com>"]
categories = ["development-tools"]
description = "Rust pre-commit hooks"
homepage = "https://github.com/rockmagma02/rust-pre-commit-hooks"
keywords = ["rust", "pre-commit", "hooks", "development-tools"]
license = "MIT"
# license-file = "LICENSE"
publish = false
# publish-lockfile = false
readme = "README.md"
repository = "https://github.com/rockmagma02/rust-pre-commit-hooks"
resolver = "2"

[[bin]]
name = "rust-pre-commit-hooks"
path = "src/main.rs"
